--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -21,13 +21,6 @@
             </div>
         </div>
     </div>
-    <div class="popup-layer" style="display: none;" id="modal">
-        <div class="popup-box msg-box">
-            <div class="popup-body">
-                <p class="msg">물품을 회수해주세요
-            </div>
-        </div>
-    </div>
 </main>
 
 <script>
@@ -93,50 +86,17 @@
         });
     }
     
-    let isItemOnTable;
-    let keep = true; // 함수 실행 가능 여부 확인 true : 가능
-    const modal = document.getElementById("modal");
-
-    /* 입고 취소 */
-    function send_stop_info() {
-        cancel = true;
-        let request = JSON.stringify({
-            step: "2",
-        });
-        modal.style.display = "block";
-        document.body.style.overflow = "hidden";
-
-        // 문 열고 물품 회수했는지 확인
-        if(keep == true){
-            keep = false;
-            axios.post('/input/stop_input', request).then(res => {
-                let response = res.data.data;
-                console.log(res.data);
-                // **삭제
-                response = 'false';
-                // 물품이 있다면 반복실행
-                if(response == 'true'){
-                    keep = true;
-                } else{
-                    // 물품이 없다면 inputItem
-                    clearInterval(isItemOnTable);
-                    location.href='/input/cancel_input_item';
-                }
-            }).catch(err => {
-                console.error(err);
-            });
-        }       
-    }
-
     $('.home_btn').click(function(){
         clearInterval(intervalId);
-        send_stop_info();    // 최초실행
-        isItemOnTable = setInterval(send_stop_info, 1000);
+        cancel = true;
+        location.href='/input/cancel_input_item';
+
     });
 
     setTimeout(function () {
-        send_stop_info();    // 최초실행
-        isItemOnTable = setInterval(send_stop_info, 1000);
+        clearInterval(intervalId);
+        cancel = true;
+        location.href='/input/cancel_input_item';
     }, 15000);
 
 </script>
