--- a/webserver/views/input/input_item_error.html
+++ b/webserver/views/input/input_item_error.html
@@ -33,13 +33,6 @@
             </div> -->
         </div>
     </div>
-    <div class="popup-layer" style="display: none;" id="modal">
-        <div class="popup-box msg-box">
-            <div class="popup-body">
-                <p class="msg">물품을 회수해주세요
-            </div>
-        </div>
-    </div>
 </main>
 
 <script>
@@ -75,48 +68,16 @@
     }
 
     setTimeout(function(){
-        send_stop_info();    // 최초실행
-        isItemOnTable = setInterval(send_stop_info, 1000);
+        location.href='/input/cancel_input_item';
     }, 5000);
 
 
-    /* 입고 취소 */
-    function send_stop_info() {
-        let request = JSON.stringify({
-            step: "2",
-        });
-        modal.style.display = "block";
-        document.body.style.overflow = "hidden";
-
-        // 문 열고 물품 회수했는지 확인
-        if(keep == true){
-            keep = false;
-            axios.post('/input/stop_input', request).then(res => {
-                let response = res.data.data;
-                console.log(res.data);
-                response = false;
-                // 물품이 있다면 반복실행
-                if(response == 'true'){
-                    keep = true;
-                } else{
-                    // 물품이 없다면
-                    clearInterval(isItemOnTable);
-                    location.href='/';
-                }
-            }).catch(err => {
-                console.error(err);
-            });
-        }       
-    }
-
     $('.home_btn').click(function(){
-        send_stop_info();    // 최초실행
-        isItemOnTable = setInterval(send_stop_info, 1000);
+        location.href='/input/cancel_input_item';
     });
 
     $('.cancel_btn').click(function(){
-        send_stop_info();    // 최초실행
-        isItemOnTable = setInterval(send_stop_info, 1000);
+        location.href='/input/cancel_input_item';
     });
     
 </script>
