--- a/webserver/views/input/input_item_error.html
+++ b/webserver/views/input/input_item_error.html
@@ -24,7 +24,7 @@
                     </div>
                     
                 </div>
-                <!-- <p class="msg">택배를 다시 입고해주세요.</p> -->
+                <p class="msg">택배를 다시 입고해주세요.</p>
             </div>
            <!--  <div class="msg-footer">
                 <div class="btn-wrap">
