--- a/webserver/views/input/register_delivery.html
+++ b/webserver/views/input/register_delivery.html
@@ -145,15 +145,13 @@
     function count(){
         if (counter > timeLimit) {
             clearInterval(intervalId);
-            return false;
+            location.href='/';
+            return;
         }
         $counter.innerText = timeLimit - counter;
         counter += 1;
     }
 
-    setTimeout(function () {
-        location.href='/';
-    }, 60000);
 
     /* 택배 회사 리스트 조회 */
     axios.get('/input/get_delivery_list')
@@ -236,28 +234,6 @@
         }
     }
 
-    /* 입고 취소 */
-    function send_stop_info() {
-        let request = JSON.stringify({
-            step: "1",
-        });
-
-        axios.post('/input/stop_input', request).then(res => {
-            if (res.data.status === 200) {
-                alert('입고가 취소되었습니다.');
-                location.href = '/';
-            } else {
-                console.log(res.data.error);
-                alert(res.data.error);
-                //location.href='/input/register_delivery_error'
-            }
-
-        }).catch(err => {
-            console.log(err);
-            alert(err.response.data.error);
-        });
-    }
-
     /* 택배사 리스트 팝업 열기 */
     select_company.onclick = () => {
         document.getElementById("popup_company").style.display = 'block';
@@ -306,7 +282,7 @@
 
     /* 첫 화면으로 */
     $('.home_btn').click(function () {
-        send_stop_info();
+        location.href='/';
     });
 
     let input = 'select_address';    // 기본 포커스 주소 input
