--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -3,12 +3,6 @@
 
 <main id="main">
     <div class="content-wrap">
-        <div class="time-wrap">
-            <p class="msg">남은시간</p>
-            <p class="time-count">
-                <span id="$counter">5</span>
-            </p>
-        </div>
         <div class="list-box">
             <div class="list-title">비밀번호 입력하거나 입주민 카드를 태그해주세요</div>
             <div class="list-top">
@@ -49,21 +43,20 @@
     const timeLimit = 30;
     let counter = 0;
     count();
-    let intervalId = setInterval(count, 1000);
+    let intervalTimer = setInterval(count, 1000);
 
     function count(){
         if (counter > timeLimit) {
-            clearInterval(intervalId);
-            return false;
+            clearInterval(intervalTimer);
+            returnItem();
         }
-        $counter.innerText = timeLimit - counter;
         counter += 1;
     }
-    setTimeout(function () {
-        returnItem();
-    }, 30000);
     
     $submit_btn.onclick = () => {
+        // 타이머 리셋
+        counter = 0;
+
         axios.post('/output/password/check', {
             item_id: parseInt(itemId),
             password: parseInt($password_input.value),
@@ -100,11 +93,17 @@
     let password_list = [];
 
     $password_input.onclick = () => {
+        // 타이머 리셋
+        counter = 0;
+
         $password_input.focus();
         input = $(":focus").attr('id')
     };
 
     $('.number').click(function () {
+        // 타이머 리셋
+        counter = 0;
+
         number = $(this).attr('value');
         if (input == '$password_input') {
             password_list.push(number)
@@ -114,6 +113,9 @@
     });
 
     backspace.onclick = () => {
+        // 타이머 리셋
+        counter = 0;
+
         if (input == '$password_input') {
             password_list.pop()
             password = password_list.join('');
