--- a/webserver/views/output/item_output_password_mismatch.html
+++ b/webserver/views/output/item_output_password_mismatch.html
@@ -3,12 +3,6 @@
 
 <main id="main">
     <div class="content-wrap">
-        <div class="time-wrap">
-            <p class="msg">남은시간</p>
-            <p class="time-count">
-                <span id="$counter">5</span>
-            </p>
-        </div>
         <div class="fixed-btn">
             <button class="btn-normal" id="$home_btn"><a href="/">첫 화면으로</a></button>
         </div>
@@ -40,20 +34,15 @@
     const timeLimit = 15;
     let counter = 0;
     count();
-    let intervalId = setInterval(count, 1000);
+    let intervalTimer = setInterval(count, 1000);
 
     function count(){
         if (counter > timeLimit) {
-            clearInterval(intervalId);
-            return false;
+            clearInterval(intervalTimer);
+            returnItem();
         }
-        $counter.innerText = timeLimit - counter;
         counter += 1;
     }
-
-    setTimeout(function () {
-        returnItem();
-    }, 15000);
 
     $re_enter_btn.onclick = () => {
         window.location.replace('/output/password/form?itemId=' + itemId);
