--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -2,12 +2,6 @@
 {{define "content"}}
 <main id="main">
     <div class="content-wrap">
-        <div class="time-wrap">
-            <p class="msg">남은시간</p>
-            <p class="time-count">
-                <span id="$counter">5</span>
-            </p>
-        </div>
         <div class="fixed-btn">
             <button class="btn-normal home_btn">첫 화면으로</button>
         </div>
@@ -35,17 +29,19 @@
     const timeLimit = 15;
     let counter = 0;
     count();
-    let intervalTime = setInterval(count, 1000);
+    let intervalTimer = setInterval(count, 1000);
 
     function count(){
         if (counter > timeLimit) {
-            clearInterval(intervalTime);
-            return false;
+            clearInterval(intervalTimer);
+            clearInterval(intervalId);
+            cancel = true;
+            location.href='/input/cancel_input_item';
         }
         $counter.innerText = timeLimit - counter;
         counter += 1;
     }
-    
+
     // 테이블에 택배 있는지 확인
     function senseTableForItem(){
         if(next == true){
@@ -60,6 +56,8 @@
                 } else{
                     // 물품이 있다면 inputItem
                     console.log("물품 들어옴");
+                    // 타이머 리셋
+                    counter = 0;
                     clearInterval(intervalId);
                     inputItem();
                 }
@@ -90,14 +88,7 @@
         clearInterval(intervalId);
         cancel = true;
         location.href='/input/cancel_input_item';
-
     });
-
-    setTimeout(function () {
-        clearInterval(intervalId);
-        cancel = true;
-        location.href='/input/cancel_input_item';
-    }, 15000);
 
 </script>
 {{end}}
