--- a/webserver/views/output/item_list_error.html
+++ b/webserver/views/output/item_list_error.html
@@ -3,12 +3,6 @@
 
 <main id="main">
     <div class="content-wrap">
-        <div class="time-wrap">
-            <p class="msg">남은시간</p>
-            <p class="time-count">
-                <span id="$counter">5</span>
-            </p>
-        </div>
         <div class="fixed-btn">
             <button class="btn-normal"><a href="/">첫 화면으로</a></button>
         </div>
@@ -29,19 +23,15 @@
     const timeLimit = 5;
     let counter = 0;
     count();
-    let intervalId = setInterval(count, 1000);
+    let intervalTimer = setInterval(count, 1000);
 
     function count(){
         if (counter > timeLimit) {
-            clearInterval(intervalId);
-            return false;
+            clearInterval(intervalTimer);
+            location.href='/';
         }
-        $counter.innerText = timeLimit - counter;
         counter += 1;
     }
 
-    setTimeout(function () {
-        location.href='/';
-    }, 5000);
 </script>
 {{end}}
