--- a/webserver/views/output/item_output_confirm.html
+++ b/webserver/views/output/item_output_confirm.html
@@ -6,7 +6,6 @@
         <div class="fixed-btn">
             <button class="btn-normal" id="$home_btn">첫 화면으로</button>
         </div>
-
         <!-- 택배 수령 -->
         <div class="msg-wrap">
             <div class="msg-body">
@@ -48,9 +47,6 @@
 
 
 <script>
-    const url = new URL(window.location.href);
-    const itemId = url.searchParams.get("itemId");
-
     /* 남은 시간 확인 */
     const timeLimit = 5;
     let counter = 0;
@@ -65,17 +61,23 @@
         counter += 1;
     }
 
+    const url = new URL(window.location.href);
+    const itemId = url.searchParams.get("itemId");
+
+    /* 수령 버튼 선택시 */
     $output_btn.onclick = () => {
         window.location.replace('/output/password/form?itemId=' + itemId);
     }
-
+    /* 반납 버튼 선택시 */
     $return_btn.onclick = () => {
         returnItem()
     }
+    /* 홈 버튼 선택시 */
     $home_btn.onclick = () => {
         returnItem()
     }
-
+    
+    /* 불출 취소 시 재수납 */
     function returnItem(){
         axios.post('/output/return?itemId=' + itemId)
             .then(axiosResult => {
