--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -36,9 +36,6 @@
 </main>
 
 <script>
-    const url = new URL(window.location.href);
-    const itemId = url.searchParams.get("itemId");
-
     /* 남은 시간 확인 */
     const timeLimit = 30;
     let counter = 0;
@@ -53,6 +50,10 @@
         counter += 1;
     }
     
+    const url = new URL(window.location.href);
+    const itemId = url.searchParams.get("itemId");
+
+    /* 입력 완료 버튼 선택시 */
     $submit_btn.onclick = () => {
         // 타이머 리셋
         counter = 0;
@@ -73,11 +74,13 @@
             })
     }
 
+    /* 취소 버튼 선택시 */
     $cancel_btn.onclick = () => {
         returnItem();
         window.location.replace('/')
     }
     
+    /* 불출 취소 시 재수납 */
     function returnItem(){
         axios.post('/output/return?itemId=' + itemId)
             .then(axiosResult => {
@@ -89,9 +92,10 @@
             });
     }
 
-    let input = '$password_input'
+    let input = '$password_input'   // 기본 포커스 주소 input
     let password_list = [];
 
+    /* 비밀번호 입력칸 클릭 */
     $password_input.onclick = () => {
         // 타이머 리셋
         counter = 0;
@@ -100,6 +104,7 @@
         input = $(":focus").attr('id')
     };
 
+    /* 숫자패드 숫자버튼 눌렀을때 */
     $('.number').click(function () {
         // 타이머 리셋
         counter = 0;
@@ -111,7 +116,8 @@
             document.getElementById("$password_input").value = password;
         }
     });
-
+    
+    /* 숫자패드 뒤로가기 버튼 눌렀을때 */
     backspace.onclick = () => {
         // 타이머 리셋
         counter = 0;
