--- a/webserver/views/output/item_output_password_mismatch.html
+++ b/webserver/views/output/item_output_password_mismatch.html
@@ -44,17 +44,22 @@
         counter += 1;
     }
 
+    /* 재입력 버튼 선택시 */
     $re_enter_btn.onclick = () => {
         window.location.replace('/output/password/form?itemId=' + itemId);
     }
 
+    /* 홈 버튼 선택시 */
     $home_btn.onclick=() => {
         returnItem();
     }
+
+    /* 취소 버튼 선택시 */
     $cancel_btn.onclick = () => {
         returnItem();
     }
     
+    /* 불출 취소 시 재수납 */   
     function returnItem(){
         axios.post('/output/return?itemId=' + itemId)
             .then(axiosResult => {
