--- a/webserver/views/input/cancel_input_item.html
+++ b/webserver/views/input/cancel_input_item.html
@@ -21,7 +21,7 @@
 </main>
 
 <script>
-    let keep = true; // 함수 실행 가능 여부 확인 true : 가능
+    let next = true;    // 함수 실행 가능 여부 확인 (이 전 동작 완료 시 실행 가능)
 
     send_stop_info();    // 최초실행
     isItemOnTable = setInterval(send_stop_info, 1000);
@@ -29,8 +29,8 @@
     /* 입고 취소 */
     function send_stop_info() {
         // 문 열고 물품 회수했는지 확인
-        if(keep == true){
-            keep = false;
+        if(next == true){
+            next = false;
             axios.post('/input/stop_input').then(res => {
                 let response = res.data.data;
                 console.log(res.data);
@@ -38,7 +38,7 @@
                 response = 'false';
                 // 물품이 있다면 반복실행
                 if(response == 'true'){
-                    keep = true;
+                    next = true;
                 } else{
                     // 물품이 없다면 inputItem
                     clearInterval(isItemOnTable);
