--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -21,8 +21,9 @@
     let url = new URL(window.location.href);
     let deliveryId = url.searchParams.get("deliveryId");
     let ownerId = url.searchParams.get("ownerId");
-    let cancel = false; // 취소 여부
-    let next = true;    // 함수 실행 가능 여부 확인 true : 가능 - 이 전 동작 완료 시 실행 가능
+
+    let cancel = false; // 실행 취소 여부
+    let next = true;    // 함수 실행 가능 여부 확인 (이 전 동작 완료 시 실행 가능)
     let intervalId = setInterval(senseTableForItem, 1000);
 
     /* 남은 시간 확인 */
@@ -42,7 +43,7 @@
         counter += 1;
     }
 
-    // 테이블에 택배 있는지 확인
+    /* 테이블에 택배 있는지 확인 */
     function senseTableForItem(){
         if(next == true){
             next = false;
@@ -66,9 +67,9 @@
             });
         }
     }
-    
+
+    /* 택배 투입 */
     function inputItem(){
-        /* 택배 투입 */
         axios.post(`/input/submit_item?deliveryId=${deliveryId}&ownerId=${ownerId}`).then(axiosResult => {
             let response = axiosResult.data;
             let redirectUrl = `${response.data}?deliveryId=${deliveryId}&ownerId=${ownerId}`;
