--- a/webserver/views/output/item_output_accept.html
+++ b/webserver/views/output/item_output_accept.html
@@ -31,6 +31,7 @@
     let counter = 0;
     let intervalId = setInterval(senseTableForItem, 1000);
 
+    /* 테이블 위의 물품 감지 */
     async function senseTableForItem() {
         counter += 1;
 
