--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -1,6 +1,15 @@
 {{template "layout.html" .}}
 {{define "content"}}
-
+<style>
+    .popup-layer input{
+        padding: 20px; 
+        font-size: 60px;
+        text-align: center;
+        width: 450px;
+        border: 1px solid #666;
+        background-color: #ddd;
+    }
+</style>
 <main id="main">
     <div class="content-wrap">
         <div class="list-box">
@@ -13,19 +22,31 @@
                 <p class="title">비밀번호</p>
                 <p class="value"><input type="password" id="$password_input"></p>
             </div>
-            <div class="number-input" id="number_keypad">
-                <button class="number" value="1">1</button>
-                <button class="number" value="2">2</button>
-                <button class="number" value="3">3</button>
-                <button class="number" value="4">4</button>
-                <button class="number" value="5">5</button>
-                <button class="number" value="6">6</button>
-                <button class="number" value="7">7</button>
-                <button class="number" value="8">8</button>
-                <button class="number" value="9">9</button>
-                <button></button>
-                <button class="number" value="0">0</button>
-                <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
+            <div class="popup-layer" style="display: none;" id="popup_keypad">
+                <div class="popup-box">
+                    <div class="popup-header">
+                        <input type="text" value="" id="number_val">
+                    </div>
+                    <div class="number-input" id="number_keypad">
+                        <button class="number" value="1">1</button>
+                        <button class="number" value="2">2</button>
+                        <button class="number" value="3">3</button>
+                        <button class="number" value="4">4</button>
+                        <button class="number" value="5">5</button>
+                        <button class="number" value="6">6</button>
+                        <button class="number" value="7">7</button>
+                        <button class="number" value="8">8</button>
+                        <button class="number" value="9">9</button>
+                        <button></button>
+                        <button class="number" value="0">0</button>
+                        <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
+                    </div>
+                    <div class="popup-footer">
+                        <div class="btn-wrap">
+                            <button class="btn-normal" id="choice_number">선택 완료</button>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="btn-wrap">
                 <button class="btn-normal" id="$submit_btn">입력 완료</button>
@@ -77,7 +98,6 @@
     /* 취소 버튼 선택시 */
     $cancel_btn.onclick = () => {
         returnItem();
-        window.location.replace('/')
     }
     
     /* 불출 취소 시 재수납 */
@@ -102,6 +122,10 @@
 
         $password_input.focus();
         input = $(":focus").attr('id')
+
+        document.getElementById("popup_keypad").style.display = 'block';
+        let password = password_list.join('');
+        document.getElementById("number_val").value = password;
     };
 
     /* 숫자패드 숫자버튼 눌렀을때 */
@@ -114,6 +138,7 @@
             password_list.push(number)
             password = password_list.join('');
             document.getElementById("$password_input").value = password;
+            document.getElementById("number_val").value = password;
         }
     });
     
@@ -126,7 +151,17 @@
             password_list.pop()
             password = password_list.join('');
             document.getElementById("$password_input").value = password;
+            document.getElementById("number_val").value = password;
         }
+    };
+
+    /* 키패드_선택완료 버튼 선택시 */
+    choice_number.onclick = () => {
+        // 타이머 리셋
+        counter = 0;
+
+        document.getElementById("popup_keypad").style.display = 'none';
+        document.getElementById("number_val").value = ""
     };
 
 </script>
