--- a/webserver/views/output/register_address.html
+++ b/webserver/views/output/register_address.html
@@ -4,10 +4,9 @@
     .list-box .list-check {
         font-size: 2.8rem;
         font-weight: 700;
-        margin: 0 auto 60px;
+        margin: 0 auto 30px;
         padding: 18px 30px;
         box-sizing: border-box;
-        width: fit-content;
         border-radius: 15px;
         word-break: keep-all;
         line-height: 135%;
@@ -15,7 +14,7 @@
     .list-box .list-check .list {
         text-align: center;
         display: flex;
-        gap: 180px;
+        gap: 100px;
 
     }
     .list-box .list-check .list .chk {
@@ -26,6 +25,9 @@
         border-color: #0069d9;
         background: #0069d9;   
     } 
+    .popup-layer{
+        height: 130%;
+    }
 
 </style>
 <main id="main">
@@ -34,44 +36,57 @@
             <button class="btn-normal" id="$cancel_btn"><a href="/">첫 화면으로</a></button>
         </div>
         <div class="list-box">
-            <div class="list-title">물품을 조회할 수단을 선택해주세요</div>
-            <div class="list-check">
-                <div class="list">
-                    <p class="chk">
-                        <input type="radio" id="address" checked name="radio" value="address" onclick="getChecked(event)">
-                        <label for="address" class="address" >호수</label>
-                    </p>
-                    <p class="chk">
-                        <input type="radio" id="tracking_num" name="radio" value="tracking_num" onclick="getChecked(event)">
-                        <label for="tracking_num" class="tracking_num" >송장번호</label>
-                    </p>
+            <div class="list-title">아래의 정보를 입력하세요</div>
+
+            <div class="list-top" id="input_info" style="margin-bottom: 350px;">
+                <p class="title">수령인의 호수 혹은 송장번호</p>
+                <p class="value"><input type="number" id="$user_info" value=""></p>
+            </div>
+            <div class="popup-layer" style="display: none;" id="popup_keypad">
+                <div class="popup-box">
+                    <div class="popup-check">
+                        <div class="list-check">
+                            <div class="list">
+                                <p class="chk">
+                                    <input type="radio" id="address" checked name="radio" value="address" onclick="getChecked(event)">
+                                    <label for="address" class="address" >호수</label>
+                                </p>
+                                <p class="chk">
+                                    <input type="radio" id="tracking_num" name="radio" value="tracking_num" onclick="getChecked(event)">
+                                    <label for="tracking_num" class="tracking_num" >송장번호</label>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="list-top" id="input_address">
+                            <p class="value"><input type="number" id="$address_info" value="">호</p>
+                        </div>
+                        <div class="list-top" id="input_tracking_num" style="display: none;">
+                            <p class="value"><input type="number" id="$tracking_num_info" value=""></p>
+                        </div>
+                    </div>
+                    <div class="number-input" id="number_keypad">
+                        <button class="number" value="1">1</button>
+                        <button class="number" value="2">2</button>
+                        <button class="number" value="3">3</button>
+                        <button class="number" value="4">4</button>
+                        <button class="number" value="5">5</button>
+                        <button class="number" value="6">6</button>
+                        <button class="number" value="7">7</button>
+                        <button class="number" value="8">8</button>
+                        <button class="number" value="9">9</button>
+                        <button></button>
+                        <button class="number" value="0">0</button>
+                        <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
+                    </div>
+                    <div class="popup-footer">
+                        <div class="btn-wrap">
+                            <button class="btn-normal" id="choice_number">선택 완료</button>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="list-top" id="input_address">
-                <p class="title">귀하의 호수</p>
-                <p class="value"><input type="number" id="$address_info" value="">호</p>
-            </div>
-            <div class="list-top" id="input_tracking_num" style="display: none;">
-                <p class="title">송장번호</p>
-                <p class="value"><input type="number" id="$tracking_num_info" value=""></p>
-            </div>
-            
-            <div class="number-input" id="number_keypad">
-                <button class="number" value="1">1</button>
-                <button class="number" value="2">2</button>
-                <button class="number" value="3">3</button>
-                <button class="number" value="4">4</button>
-                <button class="number" value="5">5</button>
-                <button class="number" value="6">6</button>
-                <button class="number" value="7">7</button>
-                <button class="number" value="8">8</button>
-                <button class="number" value="9">9</button>
-                <button></button>
-                <button class="number" value="0">0</button>
-                <button id="backspace"><img src="/static/images/backspace.png" alt=""></button>
-            </div>
             <div class="btn-wrap">
-                <button class="btn-normal" id="$submit_address_btn">입력 완료</button>
+                <button class="btn-normal" id="$submit_info_btn">입력 완료</button>
             </div>
         </div>
     </div>
@@ -97,6 +112,21 @@
     let input = '$address_info' // 기본 포커스 주소 input
     let address_list = [];
     let tracking_num_list = [];
+
+    input_info.onclick= () => {
+        // 타이머 리셋
+        counter = 0;
+
+        document.getElementById("popup_keypad").style.display = 'block';
+
+        if(input == '$address_info'){
+            let info = address_list.join('');
+            document.getElementById("$address_info").value = info;
+        } else if(input == '$tracking_num_info'){
+            let info = tracking_num_list.join('');
+            document.getElementById("$tracking_num_info").value = info;
+        }
+    };
 
     /* 주소 입력칸 클릭 */
     $address_info.onclick = () => {
@@ -126,10 +156,12 @@
             address_list.push(number)
             address = address_list.join('');
             document.getElementById("$address_info").value = address;
+            document.getElementById("$user_info").value = address;
         } else if (input == '$tracking_num_info') {
             tracking_num_list.push(number)
             tracking_num = tracking_num_list.join('');
             document.getElementById("$tracking_num_info").value = tracking_num;
+            document.getElementById("$user_info").value = tracking_num;
         }
     });
 
@@ -142,10 +174,12 @@
             address_list.pop()
             address = address_list.join('');
             document.getElementById("$address_info").value = address;
+            document.getElementById("$user_info").value = address;
         } else if (input == '$tracking_num_info') {
             tracking_num_list.pop()
             tracking_num = tracking_num_list.join('');
             document.getElementById("$tracking_num_info").value = tracking_num;
+            document.getElementById("$user_info").value = tracking_num;
         }
     };
 
@@ -176,19 +210,30 @@
         }
     }
 
+    /* 키패드_선택완료 버튼 선택시 */
+    choice_number.onclick = () => {
+        // 타이머 리셋
+        counter = 0;
+
+        document.getElementById("popup_keypad").style.display = 'none';
+        document.getElementById("$address_info").value = ""
+        document.getElementById("$tracking_num_info").value = "";
+
+    };
+
     /* 입력완료 버튼 선택시 */
-    $submit_address_btn.onclick = () => {
+    $submit_info_btn.onclick = () => {
         // 타이머 리셋
         counter = 0;
 
         // focus에 따라
         if(input == '$address_info'){
-            if ($address_info.value === '') {
+            if ($user_info.value === '') {
                 alert('주소를 입력해주세요.');
                 return false;
             }
 
-            axios.get('/output/check_item_exists?address=' + $address_info.value)
+            axios.get('/output/check_item_exists?address=' + $user_info.value)
             .then(axiosResult => {
                 let response = axiosResult.data;
                 location.replace(response);
@@ -201,12 +246,12 @@
                 }
             });
         } else if(input == '$tracking_num_info'){
-            if ($tracking_num_info.value === '') {
+            if ($user_info.value === '') {
                 alert('송장번호를 입력해주세요.');
                 return false;
             }
 
-            axios.get('/output/check_item_exists?tracking_num=' + $tracking_num_info.value)
+            axios.get('/output/check_item_exists?tracking_num=' + $user_info.value)
             .then(axiosResult => {
                 let response = axiosResult.data;
                 location.replace(response);
