키오스크 - 비밀번호 입력 보안 처리

--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -25,7 +25,7 @@
             <div class="popup-layer" style="display: none;" id="popup_keypad">
                 <div class="popup-box">
                     <div class="popup-header">
-                        <input type="text" value="" id="number_val">
+                        <input type="password" value="" id="number_val">
                     </div>
                     <div class="number-input" id="number_keypad">
                         <button class="number" value="1">1</button>
