--- a/webserver/views/input/register_delivery.html
+++ b/webserver/views/input/register_delivery.html
@@ -51,7 +51,7 @@
         font-size: 60px;
         text-align: center;
         width: 450px;
-        border: 1px solid #666;
+        border: 1px solid #ccc;
         background-color: #ddd;
     }
 </style>
